<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="@dimen/news_image_height"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_dark"
    tools:context="com.example.android.newsnow.MainActivity">

    <TextView
        android:id="@+id/all"
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:gravity="center"
        android:background="@color/category_boxes"
        android:text="@string/all_news" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/business"
            style="@style/CategoryStyle"
            android:background="@color/category_boxes"
            android:text="@string/business_news" />

        <TextView
            android:id="@+id/entertainment"
            style="@style/CategoryStyle"
            android:background="@color/category_boxes"
            android:text="@string/entertainment_news" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gaming"
            style="@style/CategoryStyle"
            android:background="@color/category_boxes"
            android:text="@string/gaming_news" />

        <TextView
            android:id="@+id/general"
            style="@style/CategoryStyle"
            android:background="@color/category_boxes"
            android:text="@string/general_news" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/music"
            style="@style/CategoryStyle"
            android:background="@color/category_boxes"
            android:text="@string/music_news" />

        <TextView
            android:id="@+id/science_and_nature"
            style="@style/CategoryStyle"
            android:background="@color/category_boxes"
            android:text="@string/science_and_nature_news" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sport"
            style="@style/CategoryStyle"
            android:background="@color/category_boxes"
            android:text="@string/sport_news" />

        <TextView
            android:id="@+id/technology"
            style="@style/CategoryStyle"
            android:background="@color/category_boxes"
            android:text="@string/technology_news" />

    </LinearLayout>

</LinearLayout>